objects/Request_Information_Revenue_Snap__c.object
<CustomObject>
    <fields>
        <fullName>ASP_Module_Chip__c</fullName>
        <label>ASP (Module/Chip)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <formula>TEXT(Request_Information__r.Opportunity__r.Deliverable_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRE__c</fullName>
        <label>NRE($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Information__c</fullName>
        <label>Request Information</label>
        <referenceTo>Request_Information__c</referenceTo>
        <relationshipLabel>Request Information Revenue SnapShot</relationshipLabel>
        <relationshipName>Request_Information_Revenue_SnapShot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_K__c</fullName>
        <label>Total Revenue ($K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnkey_ASP__c</fullName>
        <label>Turnkey ASP</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Module_Chip__c</fullName>
        <label>Volume (Module/Chip)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Request Information Revenue SnapShot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Request Information Revenue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Information Revenue SnapShot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>